<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workoutcalculator.WorkoutCalculatorView">

    <Button
        android:id="@+id/btnWeekOne"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/_65_75_85"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWeekTwo"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:text="@string/_70_80_90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWeekOne" />

    <Button
        android:id="@+id/btnWeekThree"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:text="@string/_75_85_95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWeekTwo" />

    <TextView
        android:id="@+id/txtSetOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter_a_max"
        android:textSize="@dimen/label_sizes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lstMaxes" />

    <TextView
        android:id="@+id/txtSetTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter_a_max"
        android:textSize="@dimen/label_sizes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSetOne" />

    <TextView
        android:id="@+id/txtSetThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/enter_a_max"
        android:textSize="@dimen/label_sizes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSetTwo" />

    <Spinner
        android:id="@+id/lstMaxes"
        android:layout_width="216dp"
        android:layout_height="63dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
/>

</androidx.constraintlayout.widget.ConstraintLayout>